--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "strict": true,
+    "lib": ["DOM", "es2019"],
     "target": "es6"
   },
   "exclude": ["node_modules"],
