--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:eslint": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:prettier": "prettier --check --ignore-unknown .",
-    "build": "webpack --config webpack.config.js",
+    "run": "pnpm tsc src/index.ts --outDir dist && node dist/index.js",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -40,5 +40,10 @@
     "typescript": "^5.0.4",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "1.0.0-rc.12",
+    "ts-node": "^10.9.1"
   }
 }
